# hotpot-rag

./: .gitignore  README.md  main.py  pyproject.toml
hotpot_rag/: __init__.py  cli.py  data.py  evaluation.py  experiments.py  indexing.py  llm.py  pipeline.py  rerank.py  retrieval.py
notebooks/: hotpotqa_rag_experiments.ipynb  rag_arena_experiments.ipynb
rag_arena/: __init__.py  cli.py  data.py  evaluation.py  experiments.py  indexing.py  llm.py  pipeline.py  rerank.py  retrieval.py
tests/: test_data.py  test_evaluation.py  test_experiments.py  test_experiments_summary.py  test_llm.py  test_pipeline.py  test_rerank.py  test_retrieval.py
